REFACTOR: Cliente e Servidor desacoplados.
O cliente e o servidor compartilhavam a mesma arvore de fontes e um Main unificado, acoplando os dois lados e dificultando a compilacao e execucao independente. As responsabilidades de conexao e de monitoramento do servidor tambem estavam misturadas num unico pacote. O server tambem usava threads de plataforma, cujo custo de criação é alto.

Mova `server` e `client` para diretórios independentes (`server/` e `client/`); crie `ServerMain` e `ClientMain` com seus proprios `main()`; Mova `Session` e `MonitorTasks` para o `server`; delete o pacote `Core`; divida o servidor nos pacotes `server.connection` e `server.task`; Substitua `new Thread` por `Thread.ofVirtual`; adicione `clientesConectados` como `AtomicInteger` para monitorar a quantidade de clientes conectados de forma segura para concorrência.